lang/tests/derive/common/ui/fail/03-generic.stderr
error: generic structs are not supported
 --> $DIR/03-generic.rs:5:20
  |
5 | pub struct MyStruct<T> {
  |                    ^^^
